--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -8,3 +8,4 @@
     - update_timestamp_nullable.php
 1.0.2: Improved the front-end component.
 1.0.3: Added navigation links to the forms.
+1.0.4: !!! Updated for October 420+.
