--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -11,3 +11,4 @@
 1.0.4: !!! Updated for October 420+.
 1.1.0: !!! A lot of improvement.
 1.1.1: Updated the plugin and Barion icons.
+1.1.2: Minor UI and database improvements.
