--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -9,6 +9,7 @@
 1.0.2: Improved the front-end component.
 1.0.3: Added navigation links to the forms.
 1.0.4: !!! Updated for October 420+.
-1.1.0: !!! A lot of improvement.
+1.1.0: !!! Brand new version. Rewritten code.
 1.1.1: Updated the plugin and Barion icons.
 1.1.2: Minor UI and database improvements.
+1.2.0: !!! Lots of improvements and modifications.
