Updated the locales of logo component

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -13,3 +13,4 @@
 1.1.1: Updated the plugin and Barion icons.
 1.1.2: Minor UI and database improvements.
 1.2.0: !!! Lots of improvements and modifications.
+1.2.1: Minor improvements and bugfixes.
