--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -14,3 +14,4 @@
 1.1.2: Minor UI and database improvements.
 1.2.0: !!! Lots of improvements and modifications.
 1.2.1: Minor improvements and bugfixes.
+1.2.2: Improved the UI of form component.
