--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -15,3 +15,4 @@
 1.2.0: !!! Lots of improvements and modifications.
 1.2.1: Minor improvements and bugfixes.
 1.2.2: Improved the UI of form component.
+1.2.3: Minor UI and code improvements.
