--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -16,3 +16,4 @@
 1.2.1: Minor improvements and bugfixes.
 1.2.2: Improved the UI of form component.
 1.2.3: Minor UI and code improvements.
+1.2.4: Improved the list filters.
